fix alignment and margin issues that appeared on form elements

--- a/scss/forms/form_control_label.scss
+++ b/scss/forms/form_control_label.scss
@@ -43,6 +43,7 @@
   &--bordered {
     border: 1px solid $ux-gray-400;
     border-radius: $ux-border-radius;
+    margin-bottom: 0.5rem;
     padding: 1rem;
     cursor: pointer;
 
